--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -17,9 +17,9 @@
         <div class="col">
             <div style="width: max-content;" class="mx-auto">
                 <div class="custom-row-header fs-5 text-white">Follow us</div>
-                <div class="custom-row">Facebook</div>
-                <div class="custom-row">Instagram</div>
-                <div class="custom-row">LinkedIn</div>
+                <div class="custom-row" style="cursor: pointer;">Facebook</div>
+                <div class="custom-row" style="cursor: pointer;">Instagram</div>
+                <div class="custom-row" style="cursor: pointer;">LinkedIn</div>
             </div>
         </div>
     </div>
