--- a/FrontEnd/src/app/modules/auth/pages/login/login.component.html
+++ b/FrontEnd/src/app/modules/auth/pages/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<!-- Đăng nhập.component.html -->
+<mat-card>
+	<mat-card-header>
+		<mat-card-title>Đăng nhập</mat-card-title>
+	</mat-card-header>
+	<mat-card-content>
+		<form>
+			<mat-form-field appearance="fill">
+				<mat-label>Email</mat-label>
+				<input matInput placeholder="Enter your email" type="email">
+			</mat-form-field>
+			<mat-form-field appearance="fill">
+				<mat-label>Password</mat-label>
+				<input matInput placeholder="Enter your password" type="password">
+			</mat-form-field>
+			<button mat-raised-button color="primary">Đăng nhập</button>
+		</form>
+	</mat-card-content>
+</mat-card>
