--- a/FrontEnd/src/app/modules/auth/pages/register/register.component.html
+++ b/FrontEnd/src/app/modules/auth/pages/register/register.component.html
@@ -1,1 +1,23 @@
-<p>register works!</p>
+<!-- register.component.html -->
+<mat-card>
+	<mat-card-header>
+		<mat-card-title>Register</mat-card-title>
+	</mat-card-header>
+	<mat-card-content>
+		<form>
+			<mat-form-field appearance="fill">
+				<mat-label>Email</mat-label>
+				<input matInput placeholder="Enter your email" type="email">
+			</mat-form-field>
+			<mat-form-field appearance="fill">
+				<mat-label>Password</mat-label>
+				<input matInput placeholder="Enter your password" type="password">
+			</mat-form-field>
+			<mat-form-field appearance="fill">
+				<mat-label>Confirm Password</mat-label>
+				<input matInput placeholder="Confirm your password" type="password">
+			</mat-form-field>
+			<button mat-raised-button color="primary">Register</button>
+		</form>
+	</mat-card-content>
+</mat-card>
