--- a/FrontEnd/src/app/module/reccer/position/position.component.html
+++ b/FrontEnd/src/app/module/reccer/position/position.component.html
@@ -1,22 +1,21 @@
 <div class="container shadow d-flex flex-column justify-content-center mx-5">
-  <span class="mt-2 mx-auto fs-3">POSITION LIST</span>
-  <div class="mx-5">
-    <div class="container py-2">
-      <div class="row border border-secondary rounded-4 p-2">
-        <div class="col">
-          <img
-            src="https://firebasestorage.googleapis.com/v0/b/fashionecommerce-2377f.appspot.com/o/images%2Fproduct%2FAIRPLANE_TEE_0.jpg?alt=media&token=b2f6fc75-0da4-4b44-ac2c-bf97805ed8b4"
-            class="h-auto w-25 rounded-4" alt="...">
-        </div>
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-      </div>
-    </div>
-    <!-- <div class="border border-secondary rounded-4 p-2">
+	<span class="mt-2 mx-auto fs-3">POSITION LIST</span>
+	<div class="mx-5">
+		<div class="container py-2">
+			<div class="row border border-secondary rounded-4 p-2">
+				<div class="col">
+					<img src="https://firebasestorage.googleapis.com/v0/b/fashionecommerce-2377f.appspot.com/o/images%2Fproduct%2FAIRPLANE_TEE_0.jpg?alt=media&token=b2f6fc75-0da4-4b44-ac2c-bf97805ed8b4"
+						class="h-auto w-25 rounded-4" alt="...">
+				</div>
+				<div class="col">
+					Column
+				</div>
+				<div class="col">
+					Column
+				</div>
+			</div>
+		</div>
+		<!-- <div class="border border-secondary rounded-4 p-2">
       <div>
         <img
           src="https://firebasestorage.googleapis.com/v0/b/fashionecommerce-2377f.appspot.com/o/images%2Fproduct%2FAIRPLANE_TEE_0.jpg?alt=media&token=b2f6fc75-0da4-4b44-ac2c-bf97805ed8b4"
@@ -26,5 +25,5 @@
 
       </div>
     </div> -->
-  </div>
+	</div>
 </div>
