--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="custom-footer">
+<footer class="custom-footer fixed-bottom">
 	<div class="row">
 		<div class="col">
 			<div style="width: max-content;" class="mx-auto">
@@ -23,4 +23,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
