--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -8,9 +8,13 @@
 </head>
 
 <body>
+	<!-- header -->
 	<app-header></app-header>
+
 	<!-- <div>Home</div> -->
 	<router-outlet></router-outlet>
+
+	<!-- footer -->
 	<app-footer></app-footer>
 </body>
 
