--- a/FrontEnd/src/app/module/auth/register/register.component.html
+++ b/FrontEnd/src/app/module/auth/register/register.component.html
@@ -1,7 +1,7 @@
 <!-- register.component.html -->
 <mat-card>
 	<mat-card-header>
-		<mat-card-title>Register</mat-card-title>
+		<mat-card-title class="">Register</mat-card-title>
 	</mat-card-header>
 	<mat-card-content>
 		<form>
