--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -9,25 +9,19 @@
         <div class="text-white mx-2 fs-4">Home</div>
         <div class="text-white mx-2 fs-4">Home</div>
         <div style="margin-left: 10%; margin-right: 2%; width: 500px;">
-            <div class="form-outline">
-                <input type="text" id="form1" class="form-control form-icon-trailing rounded-4"
-                    placeholder="Search job" />
-                <!-- <label class="form-label text-white" for="form1">Example label</label> -->
+            <div>
+                <form class="example-form">
+                    <mat-form-field class="example-full-width">
+                        <mat-label>Search for jobs</mat-label>
+                        <textarea style="resize: none;" matInput placeholder="Ex. It makes me feel..."></textarea>
+                      </mat-form-field>
+                </form>
+
             </div>
-            <!-- <div class="form-outline" data-mdb-input-init>
-                <i class="fas fa-exclamation-circle trailing"></i>
-                <input type="text" id="form1" class="form-control form-icon-trailing" />
-                <label class="form-label" for="form1">Example label</label>
-            </div>
-            <mat-form-field class="example-full-width">
-                <mat-label>Leave a comment</mat-label>
-                <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
-            </mat-form-field> -->
         </div>
-        <div class="rounded-5 d-flex justify-content-center align-items-center" 
-        style="margin-left: auto; margin-right: 3%; background-color: white; width: 45px; height: auto; cursor: pointer;">
-            <i class="bi bi-person-circle" 
-            style="font-size: 30px; color: #1c395f; height: 44px; "></i>
+        <div class="rounded-5 d-flex justify-content-center align-items-center"
+            style="margin-left: auto; margin-right: 3%; background-color: white; width: 45px; height: auto; cursor: pointer;">
+            <i class="bi bi-person-circle" style="font-size: 30px; color: #1c395f; height: 44px; "></i>
         </div>
     </div>
 </div>
