--- a/FrontEnd/src/app/module/auth/login/login.component.html
+++ b/FrontEnd/src/app/module/auth/login/login.component.html
@@ -8,12 +8,12 @@
 			<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
 				<form>
 					<div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-						<p class="lead fw-normal mb-0 me-3">Sign in with</p>
-						<button type="button" class="btn btn-primary btn-floating mx-1">
+						<p class="lead fw-normal mb-0 me-3">Đăng nhập với</p>
+						<button type="button" class="btn btn-primary btn-floating mx-1 rounded-9">
 							<i class="fab fa-facebook-f"></i>
 						</button>
 
-						<button type="button" class="btn btn-primary btn-floating mx-1">
+						<button type="button" class="btn btn-primary btn-floating mx-1 rounded-9">
 							<i class="fab fa-twitter"></i>
 						</button>
 
@@ -28,16 +28,16 @@
 
 					<!-- Email input -->
 					<div class="form-outline mb-4">
+						<label class="form-label" for="form3Example3">Email address</label>
 						<input type="email" id="form3Example3" class="form-control form-control-lg"
 							placeholder="Enter a valid email address" />
-						<label class="form-label" for="form3Example3">Email address</label>
 					</div>
 
 					<!-- Password input -->
 					<div class="form-outline mb-3">
+						<label class="form-label" for="form3Example4">Password</label>
 						<input type="password" id="form3Example4" class="form-control form-control-lg"
 							placeholder="Enter password" />
-						<label class="form-label" for="form3Example4">Password</label>
 					</div>
 
 					<div class="d-flex justify-content-between align-items-center">
@@ -45,17 +45,18 @@
 						<div class="form-check mb-0">
 							<input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
 							<label class="form-check-label" for="form2Example3">
-								Remember me
+								Lưu mật khẩu
 							</label>
 						</div>
-						<a href="#!" class="text-body">Forgot password?</a>
+						<a href="#!" class="text-body">Quên mật khẩu?</a>
 					</div>
 
 					<div class="text-center text-lg-start mt-4 pt-2">
 						<button type="button" class="btn btn-primary btn-lg"
-							style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-						<p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
-								class="link-danger">Register</a></p>
+							style="padding-left: 2.5rem; padding-right: 2.5rem;">Đăng nhập</button>
+						<p class="small fw-bold mt-2 pt-1 mb-0">Bạn chưa có tài khoản?
+							<a href="#!" class="link-danger">Đăng ký tài khoản</a>
+						</p>
 					</div>
 
 				</form>
