--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="custom-footer">
-    <div class="row">
+    <div class="row py-2">
         <div class="col">
             <div style="width: max-content;" class="mx-auto">
                 <div class="custom-row-header fs-5 text-white">Recruitment Website</div>
@@ -19,7 +19,7 @@
                 <div class="custom-row-header fs-5 text-white">Follow us</div>
                 <div class="custom-row" style="cursor: pointer;">Facebook</div>
                 <div class="custom-row" style="cursor: pointer;">Instagram</div>
-                <div class="custom-row" style="cursor: pointer;">LinkedIn</div>
+                <div class="custom-row-end" style="cursor: pointer;">LinkedIn</div>
             </div>
         </div>
     </div>
