--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -1,27 +1,24 @@
-<div class="custom-header">
-    <div class="d-flex flex-row py-2">
-        <div class="px-2">
-            <span class="font-weight-bold fs-4 py-1 mx-2 rounded-3 px-2"
-                style="background-color: white; color: #1c395f;">Recruitment Website</span>
-        </div>
-        <div class="text-white mx-2 fs-4">Home</div>
-        <div class="text-white mx-2 fs-4">About</div>
-        <div class="text-white mx-2 fs-4">Home</div>
-        <div class="text-white mx-2 fs-4">Home</div>
-        <div style="margin-left: 10%; margin-right: 2%; width: 500px;">
-            <div>
-                <form class="example-form">
-                    <mat-form-field class="example-full-width">
-                        <mat-label>Search for jobs</mat-label>
-                        <textarea style="resize: none;" matInput placeholder="Ex. It makes me feel..."></textarea>
-                      </mat-form-field>
-                </form>
-
+<div class="custom-header ">
+    <div class="d-flex flex-row">
+        <div class="d-flex flex-row py-3">
+            <div class="px-2">
+                <span class="font-weight-bold fs-4 py-1 mx-2 rounded-3 px-2"
+                    style="background-color: white; color: #1c395f;">Recruitment Website</span>
             </div>
+            <div class="text-white mx-2 fs-4">Home</div>
+            <div class="text-white mx-2 fs-4">About</div>
+            <div class="text-white mx-2 fs-4">Home</div>
+            <div class="text-white mx-2 fs-4">Home</div>
         </div>
-        <div class="rounded-5 d-flex justify-content-center align-items-center"
-            style="margin-left: auto; margin-right: 3%; background-color: white; width: 45px; height: auto; cursor: pointer;">
-            <i class="bi bi-person-circle" style="font-size: 30px; color: #1c395f; height: 44px; "></i>
+        <div class="py-2" style="margin-left: 10%; margin-right: 2%; width: 500px; height: 55px;">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+                <input type="text" class="form-control" placeholder="Ex. Dev, Digital Marketing, ..." aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+        </div>
+        <div class="d-flex justify-content-center"
+            style="margin-left: auto; margin-right: 3%; cursor: pointer;">
+            <i class="bi bi-person-circle my-auto px-1 py-1 rounded-5" style="background-color: white; font-size: 40px; color: #1c395f; height: 48px;"></i>
         </div>
     </div>
 </div>
