--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -2,7 +2,5 @@
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 
-<!-- todo: ạkfa;slkdfj -->
 <!-- MDB -->
-<!-- <script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script> -->
+<!-- <script type="text/javascript" src=></script> -->
