--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -11,9 +11,9 @@
             <div class="text-white mx-2 fs-4">Home</div>
         </div>
         <div class="py-2" style="margin-left: 10%; margin-right: 2%; width: 500px; height: 55px;">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-                <input type="text" class="form-control" placeholder="Ex. Dev, Digital Marketing, ..." aria-label="Username" aria-describedby="basic-addon1">
+            <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="basic-addon1" style="background-color: white;"><i class="bi bi-search"></i></span>
+                <input type="text" class="form-control" placeholder="Ex. Dev, Digital Marketing" aria-label="Search for jobs" aria-describedby="addon-wrapping" />
               </div>
         </div>
         <div class="d-flex justify-content-center"
