--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -3,9 +3,8 @@
 /* @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"; */
 /* @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css"; */
 
-@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
-@import '@fortawesome/fontawesome-free/css/all.css';
-@import 'mdb-angular-ui-kit/assets/scss/mdb.scss';
+/* @import '@fortawesome/fontawesome-free/css/all.css';
+@import 'mdb-angular-ui-kit/assets/scss/mdb.scss'; */
 
 html,
 body {
