--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="custom-footer fixed-bottom">
+<div class="custom-footer bottom-100">
 	<div class="row py-2">
 		<div class="col">
 			<div style="width: max-content;" class="mx-auto">
