--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -4,7 +4,7 @@
 			<div style="width: max-content;" class="mx-auto">
 				<div class="custom-row-header fs-5 text-white">Recruitment Website</div>
 				<div class="custom-row">About Recruitment Website</div>
-				<div class="custom-row">Question - answer</div>
+				<div class="custom-row">Question & Answer</div>
 			</div>
 		</div>
 		<div class="col">
