--- a/FrontEnd/src/app/module/reccer/position/position.component.html
+++ b/FrontEnd/src/app/module/reccer/position/position.component.html
@@ -7,7 +7,7 @@
         style="width: 75%; background-color: rgb(230, 241, 250); border: 1px solid rgb(134, 134, 232);">
         <div>
           <img src="{{position.imageURL}}" class="rounded-4"
-            style="width: 120px; height: 120px;" alt="Position Image">
+            style="width: 120px; height: 120px;" alt="{{position.positionName}}">
         </div>
         <div class="ms-3" style="width: 40%;">
           <div class="fs-5 custom-row" style="font-weight: 500;">{{ position.positionName }}</div>
