Revert "Merge branch 'rec-position' into FRONTEND/authen"
This reverts commit 9a575afc14b893ddf5fae4da024040628662bd48, reversing
changes made to c7d6ddda01b4f7d968104894fb4b18f03a78f1d2.

--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -1,24 +1,26 @@
 <div class="custom-header ">
-    <div class="d-flex flex-row">
-        <div class="d-flex flex-row py-3">
-            <div class="px-2">
-                <span class="font-weight-bold fs-4 py-1 mx-2 rounded-3 px-2"
-                    style="background-color: white; color: #1c395f;">Recruitment Website</span>
-            </div>
-            <div class="text-white mx-2 fs-4">Home</div>
-            <div class="text-white mx-2 fs-4">About</div>
-            <div class="text-white mx-2 fs-4">Home</div>
-            <div class="text-white mx-2 fs-4">Home</div>
-        </div>
-        <div class="py-2" style="margin-left: 10%; margin-right: 2%; width: 500px; height: 55px;">
-            <div class="input-group flex-nowrap">
-                <span class="input-group-text" id="basic-addon1" style="background-color: white;"><i class="bi bi-search"></i></span>
-                <input type="text" class="form-control" placeholder="Ex. Dev, Digital Marketing" aria-label="Search for jobs" aria-describedby="addon-wrapping" />
-              </div>
-        </div>
-        <div class="d-flex justify-content-center"
-            style="margin-left: auto; margin-right: 3%; cursor: pointer;">
-            <i class="bi bi-person-circle my-auto px-1 py-1 rounded-5" style="background-color: white; font-size: 40px; color: #1c395f; height: 48px;"></i>
-        </div>
-    </div>
+	<div class="d-flex flex-row">
+		<div class="d-flex flex-row py-3 col-sm-auto col-auto">
+			<div class="px-2">
+				<span class="font-weight-bold fs-4 py-1 mx-2 rounded-3 px-2"
+					style="background-color: white; color: #1c395f;">Recruitment Website</span>
+			</div>
+			<div class="text-white mx-2 fs-4 col-auto">Home</div>
+			<div class="text-white mx-2 fs-4 col-auto">About</div>
+			<div class="text-white mx-2 fs-4 col-auto">Contact</div>
+			<div class="text-white mx-2 fs-4 col-auto">Bruh</div>
+		</div>
+		<div class="py-2 col-sm-4 col-md-auto" style="margin-left: 10%; margin-right: 2%; width: 500px; height: 55px;">
+			<div class="input-group mb-3">
+				<span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+				<input type="text" class="form-control col-md-auto" placeholder="Ex. Dev, Digital Marketing, ..."
+					aria-label="Username" aria-describedby="basic-addon1">
+			</div>
+		</div>
+		<div class="d-flex justify-content-center py-2 col-md-3"
+			style="margin-left: auto; margin-right: 3%; cursor: pointer;">
+			<i class="bi bi-person-circle my-auto px-1 py-1 rounded-5"
+				style="background-color: white; font-size: 40px; color: #1c395f; height: 48px;"></i>
+		</div>
+	</div>
 </div>
