--- a/FrontEnd/src/app/module/auth/login/login.component.html
+++ b/FrontEnd/src/app/module/auth/login/login.component.html
@@ -7,7 +7,7 @@
 			</div>
 			<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
 				<form>
-					<div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+					<!-- <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
 						<p class="lead fw-normal mb-0 me-3">Đăng nhập với</p>
 						<button type="button" class="btn btn-primary btn-floating mx-1 rounded-9">
 							<i class="fab fa-facebook-f"></i>
@@ -20,17 +20,17 @@
 						<button type="button" class="btn btn-primary btn-floating mx-1">
 							<i class="fab fa-linkedin-in"></i>
 						</button>
-					</div>
+					</div> -->
 
-					<div class="divider d-flex align-items-center my-4">
+					<!-- <div class="divider d-flex align-items-center my-4">
 						<p class="text-center fw-bold mx-3 mb-0">Or</p>
-					</div>
+					</div> -->
 
 					<!-- Email input -->
 					<div class="form-outline mb-4">
-						<label class="form-label" for="form3Example3">Email address</label>
-						<input type="email" id="form3Example3" class="form-control form-control-lg"
-							placeholder="Enter a valid email address" />
+						<label class="form-label" for="formEmail">Email address</label>
+						<input type="email" id="formEmail" class="form-control form-control-lg" [formNoValidate]="false"
+							placeholder="Nhập mail của chế vào đây" />
 					</div>
 
 					<!-- Password input -->
@@ -52,10 +52,11 @@
 					</div>
 
 					<div class="text-center text-lg-start mt-4 pt-2">
-						<button type="button" class="btn btn-primary btn-lg"
+						<button type="button" class="btn btn-primary btn-lg" (click)="onSubmit()"
 							style="padding-left: 2.5rem; padding-right: 2.5rem;">Đăng nhập</button>
 						<p class="small fw-bold mt-2 pt-1 mb-0">Bạn chưa có tài khoản?
-							<a href="#!" class="link-danger">Đăng ký tài khoản</a>
+							<a href="/auth/register" class="link-danger">Đăng ký tài khoản</a>
+
 						</p>
 					</div>
 
