--- a/FrontEnd/src/app/module/auth/login/login.component.html
+++ b/FrontEnd/src/app/module/auth/login/login.component.html
@@ -6,7 +6,7 @@
 					class="img-fluid" alt="Sample image">
 			</div>
 			<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-				<form>
+				<form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
 					<!-- <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
 						<p class="lead fw-normal mb-0 me-3">Đăng nhập với</p>
 						<button type="button" class="btn btn-primary btn-floating mx-1 rounded-9">
@@ -28,16 +28,16 @@
 
 					<!-- Email input -->
 					<div class="form-outline mb-4">
-						<label class="form-label" for="formEmail">Email address</label>
-						<input type="email" id="formEmail" class="form-control form-control-lg" [formNoValidate]="false"
-							placeholder="Nhập mail của chế vào đây" />
+						<label class="form-label" for="formEmail">Username</label>
+						<input type="text" id="formEmail" class="form-control form-control-lg" [formNoValidate]="false"
+							placeholder="Nhập username của chế vào đây" formControlName="username" />
 					</div>
 
 					<!-- Password input -->
 					<div class="form-outline mb-3">
 						<label class="form-label" for="form3Example4">Password</label>
 						<input type="password" id="form3Example4" class="form-control form-control-lg"
-							placeholder="Enter password" />
+							placeholder="Enter password" formControlName="password" />
 					</div>
 
 					<div class="d-flex justify-content-between align-items-center">
@@ -52,11 +52,11 @@
 					</div>
 
 					<div class="text-center text-lg-start mt-4 pt-2">
-						<button type="button" class="btn btn-primary btn-lg" (click)="onSubmit()"
-							style="padding-left: 2.5rem; padding-right: 2.5rem;">Đăng nhập</button>
+						<button type="submit" class="btn btn-primary btn-lg"
+							style="padding-left: 2.5rem; padding-right: 2.5rem;">Đăng
+							nhập</button>
 						<p class="small fw-bold mt-2 pt-1 mb-0">Bạn chưa có tài khoản?
 							<a href="/auth/register" class="link-danger">Đăng ký tài khoản</a>
-
 						</p>
 					</div>
 
