# Middleware đcmn được rồi =)))))

--- a/FrontEnd/src/app/module/reccer/company/company.component.html
+++ b/FrontEnd/src/app/module/reccer/company/company.component.html
@@ -1,18 +1,2 @@
 <p>company works!</p>
-<!-- company-list.component.html -->
-<!-- <table>
-	<tr>
-		<th>ID</th>
-		<th>Name</th>
-		<th>Industry</th>
-		<th>More Info</th>
-	</tr>
-	<tr>
-		@for (company of companies; track $index) {
-		<td>{{ company.departmentId }}</td>
-		<td>{{ company.departmentName}}</td>
-		<td>{{ company.address }}</td>
-		<td><a [href]="company.website" target="_blank">Website</a></td>
-		}
-	</tr>
-</table> -->
+{{companies}}
