--- a/FrontEnd/src/app/module/home/home.component.html
+++ b/FrontEnd/src/app/module/home/home.component.html
@@ -1,3 +1,29 @@
 <div>
 	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
 </div>
