--- a/FrontEnd/src/app/module/reccer/position/position.component.html
+++ b/FrontEnd/src/app/module/reccer/position/position.component.html
@@ -1,34 +1,44 @@
 <div class="shadow d-flex flex-column justify-content-center" style="margin-left: 7%; margin-right: 7%;">
-  <span class="mt-4 mx-auto fs-3">POSITION LIST</span>
+  <span class="mt-4 mx-auto" style="font-size: 35px;">POSITION LIST</span>
   <div class="mx-5">
     <div class="container py-3">
+      <div class="">
+        <button color="primary" mat-raised-button class="d-flex justify-content-center align-items-center"
+          (click)="openAddFormDialog('100ms', '0ms')">
+          <i class="bi bi-plus-circle" style="font-size: 20px;"></i> New Position
+        </button>
+      </div>
       @for (position of fetchedPositions; track position) {
-      <div class="d-flex flex-row rounded-3 p-3 hover-overlay my-2"
-        style="width: 75%; background-color: rgb(230, 241, 250); border: 1px solid rgb(134, 134, 232);">
-        <div>
-          <img src="{{position.imageURL}}" class="rounded-4"
-            style="width: 120px; height: 120px;" alt="{{position.positionName}}">
+      <div class="d-flex flex-row rounded-4 hover-overlay my-2"
+        style="padding: 10px 10px 10px 10px; width: 65%; background-color: rgb(230, 241, 250); border: 1px solid rgb(134, 134, 232);">
+        <div style="width: 15%;">
+          <img src="{{position.company?.logo}}" class="rounded-4" style="width: 120px; height: 120px;"
+            alt="{{position.company?.companyName + ' logo'}}">
         </div>
-        <div class="ms-3" style="width: 40%;">
+        <div style="width: 40%; margin-left: 4%;">
           <div class="fs-5 custom-row" style="font-weight: 500;">{{ position.positionName }}</div>
-          <div class="custom-row"> Department: {{ position.department?.departmentName }}</div>
+          <div class="custom-row"> {{ position.company?.companyName }}</div>
           <div style="color: rgb(251, 115, 74);">${{ position.salary }}</div>
           <div class="custom-row"> Max hiring quantity: {{ position.maxHiringQty }}</div>
-          <div class="custom-row"> From: {{ position.startDate | date:'dd/MM/yyyy' }} To: {{ position.endDate | date:'dd/MM/yyyy' }}</div>
-          <div class="custom-row"> {{ position.language?.languageName}}</div>
+          <div class="custom-row"> {{ position.startDate | date:'dd/MM/yyyy' }} - {{ position.endDate |
+            date:'dd/MM/yyyy' }}</div>
+          <div class="custom-row rounded-2"
+            style="padding: 2px 2px 2px 2px; background-color: rgb(224, 224, 224) ;width: fit-content;"> {{
+            position.language?.languageName}}</div>
         </div>
-        <div class="ms-3 flex-grow-1" style="width: 45%;">
-          <textarea readonly class="flex-grow-1 rounded-3"
-            style="width: 100%; height: 100%; border: 1px solid rgb(134, 134, 232); resize: none;"> {{ position.description }}</textarea>
+        <div class="ms-3 flex-grow-1" style="width: 25%;">
+          <!-- <textarea readonly class="flex-grow-1 rounded-3"
+            style="width: 100%; height: 100%; border: 1px solid rgb(134, 134, 232); resize: none;"> {{ position.description }}</textarea> -->
         </div>
-        <div class="ms-3" style="width: 3%;">
+        <div class="ms-3 me-2" style="width: 3%;">
+          @if(position.recruiter?.userId === currentUser.id) {
           <i mat-button [matMenuTriggerFor]="menu" class="bi bi-three-dots custom-3-dot"></i>
+          }
         </div>
         <mat-menu #menu="matMenu">
-          <button mat-menu-item>Edit</button>
-          <button mat-menu-item>Delete</button>
-        </mat-menu>
-
+            <button mat-menu-item><i class="bi bi-pencil-square"></i> Edit</button>
+            <button mat-menu-item (click)="openDeleteDialog(position.positionId??'', '100ms', '0ms')" ><i class="bi bi-trash3-fill" style="color: red;"></i> Delete</button>
+          </mat-menu>
       </div>
       }
 
