--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -19,8 +19,22 @@
 		</div>
 		<div class="d-flex justify-content-center py-2 col-md-3"
 			style="margin-left: auto; margin-right: 3%; cursor: pointer;">
-			<i class="bi bi-person-circle my-auto px-1 py-1 rounded-5"
+			<i [mat-menu-trigger-for]="menu" class="bi bi-person-circle my-auto px-1 py-1 rounded-5"
 				style="background-color: white; font-size: 40px; color: #1c395f; height: 48px;"></i>
 		</div>
+		<mat-menu #menu="matMenu" xPosition='before' yPosition="below">
+			<button mat-menu-item>
+				<i class="fa-solid fa-user"></i>
+				<span class="mx-5 align-right">Profile</span>
+			</button>
+			<button mat-menu-item>
+				<i class="fa-solid fa-gear"></i>
+				<span class="mx-5 align-right">Settings</span>
+			</button>
+			<button mat-menu-item>
+				<i class="fa-solid fa-right-from-bracket"></i>
+				<span class="mx-5 align-right">Logout</span>
+			</button>
+		</mat-menu>
 	</div>
 </div>
