Position: (All R) & (Reccer CRUD) - without pagination, detail, filter

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,4 +1,10 @@
 <app-header></app-header>
+@if(this.isLoading$ | async){
+<div class="spinner_overlay">
+	<mat-progress-spinner [mode]="'indeterminate'">
+	</mat-progress-spinner>
+</div>
+}
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 
