--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -1,25 +1,31 @@
-<div class="custom-footer">
+<div class="custom-footer bottom-0">
 	<div class="row py-2">
 		<div class="col-md col-sm">
-			<div style="width: max-content;" class="mx-auto">
-				<div class="custom-row-header fs-5 text-white">Recruitment Website</div>
+			<div style="width: max-content" class="mx-auto">
+				<div class="custom-row-header fs-5 text-white">
+					Recruitment Website
+				</div>
 				<div class="custom-row">About Recruitment Website</div>
 				<div class="custom-row">Question - answer</div>
 			</div>
 		</div>
 		<div class="col-md col-sm">
-			<div style="width: max-content;" class="mx-auto">
+			<div style="width: max-content" class="mx-auto">
 				<div class="custom-row-header fs-5 text-white">Our contact</div>
-				<div class="custom-row">Email: Recruitmentwebsite&#64;gmail.com</div>
+				<div class="custom-row">
+					Email: Recruitmentwebsite&#64;gmail.com
+				</div>
 				<div class="custom-row">Phone number: 1900 0000</div>
 			</div>
 		</div>
 		<div class="col-md col-sm">
-			<div style="width: max-content;" class="mx-auto">
+			<div style="width: max-content" class="mx-auto">
 				<div class="custom-row-header fs-5 text-white">Follow us</div>
-				<div class="custom-row" style="cursor: pointer;">Facebook</div>
-				<div class="custom-row" style="cursor: pointer;">Instagram</div>
-				<div class="custom-row-end" style="cursor: pointer;">LinkedIn</div>
+				<div class="custom-row" style="cursor: pointer">Facebook</div>
+				<div class="custom-row" style="cursor: pointer">Instagram</div>
+				<div class="custom-row-end" style="cursor: pointer">
+					LinkedIn
+				</div>
 			</div>
 		</div>
 	</div>
