--- a/FrontEnd/src/app/module/auth/logout-dialog/logout-dialog.component.html
+++ b/FrontEnd/src/app/module/auth/logout-dialog/logout-dialog.component.html
@@ -8,8 +8,13 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-	<button mat-raised-button color="primary" matDialogClose>
+	<!-- <button mat-raised-button color="primary" matDialogClose></button> -->
+	<!-- <button cdkFocusInitial></button> -->
+
+	<button mat-raised-button color="primary" (click)="onNoClick()">
 		Thôi, không đăng xuất nữa
 	</button>
-	<button mat-button color="warn" cdkFocusInitial>Đăng xuất đi</button>
+	<button mat-button color="warn" (click)="onLogoutClick()" cdkFocusInitial>
+		Đăng xuất đi
+	</button>
 </mat-dialog-actions>
