--- a/FrontEnd/src/app/layout/header/header.component.css
+++ b/FrontEnd/src/app/layout/header/header.component.css
@@ -1,18 +1,21 @@
 /* You might want to cap the font size for very large or very small viewports */
 @media (min-width: 1200px) {
 	.custom-header .fs-4 {
-		font-size: 10px; /* Cap the font size for large screens */
+		font-size: 10px;
+		/* Cap the font size for large screens */
 	}
 }
 
 @media (max-width: 600px) {
 	.custom-header .fs-4 {
-		font-size: 5px; /* Minimum font size for small screens */
+		font-size: 5px;
+		/* Minimum font size for small screens */
 	}
 }
 
 .custom-header .fs-4 {
-	font-size: 2vw; /* This will scale the font size with the viewport width */
+	font-size: 2vw;
+	/* This will scale the font size with the viewport width */
 }
 
 .custom-header {
