#fix header footer

--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="custom-footer bottom-0">
+<!-- <div class="custom-footer bottom-0">
 	<div class="row py-2">
 		<div class="col-md col-sm">
 			<div style="width: max-content" class="mx-auto">
@@ -29,4 +29,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
