--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="custom-header">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<div class="d-flex flex-row">
 		<div class="d-flex flex-row py-4 col-sm-auto col-auto">
 			<div class="px-2">
@@ -70,4 +70,4 @@
 			}
 		</mat-menu>
 	</div>
-</div>
+</nav>
