--- a/FrontEnd/src/app/module/reccer/position/position.component.html
+++ b/FrontEnd/src/app/module/reccer/position/position.component.html
@@ -25,18 +25,6 @@
 							<option class="p-2" value="MaxHiringQty_ASC">Hiring Quantity (Low to high)</option>
 						</select>
 					</div>
-
-					<!-- <mat-form-field class="p-2">
-					<mat-label>Sort by: </mat-label>
-					<mat-select [value]="this.sortString" (valueChange)="handleSortSelect($event)">
-						<mat-option value="PositionName_ASC">Name (A-Z)</mat-option>
-						<mat-option value="PositionName_DESC">Name (Z-A)</mat-option>
-						<mat-option value="Salary_DESC">Salary (High to low)</mat-option>
-						<mat-option value="Salary_ASC">Salary (Low to high)</mat-option>
-						<mat-option value="MaxHiringQty_DESC">Hiring Quantity (High to low)</mat-option>
-						<mat-option value="MaxHiringQty_ASC">Hiring Quantity (Low to high)</mat-option>
-					</mat-select>
-				</mat-form-field> -->
 				</div>
 
 				@for (position of fetchedPositions; track position) {
@@ -63,10 +51,7 @@
 							{{
 							position.language?.languageName}}</div>
 					</div>
-					<div class="ms-3 flex-grow-1" style="width: 25%;">
-						<!-- <textarea readonly class="flex-grow-1 rounded-3"
-            style="width: 100%; height: 100%; border: 1px solid rgb(134, 134, 232); resize: none;"> {{ position.description }}</textarea> -->
-					</div>
+					<div class="ms-3 flex-grow-1" style="width: 25%;"></div>
 					<div class="ms-3 me-2" style="width: 3%;">
 						@if(position.recruiter?.userId === currentUser.id) {
 						<i mat-button [matMenuTriggerFor]="menu" class="bi bi-three-dots custom-3-dot"></i>
@@ -86,18 +71,6 @@
 						(page)="handlePageEvent($event)" aria-label="Select page">
 					</mat-paginator>
 				</div>
-
-				<!-- </div> -->
-				<!-- <div class="border border-secondary rounded-4 p-2">
-		<div>
-		  <img
-			src="https://firebasestorage.googleapis.com/v0/b/fashionecommerce-2377f.appspot.com/o/images%2Fproduct%2FAIRPLANE_TEE_0.jpg?alt=media&token=b2f6fc75-0da4-4b44-ac2c-bf97805ed8b4"
-			class="h-auto w-25 rounded-4" alt="...">
-		</div>
-		<div>
-
-		</div>
-	  </div> -->
 			</div>
 			<div class="d-flex flex-column ms-4 mt-5" style="width: 30%;">
 				<app-filter [formGroup]="this.filterForm"></app-filter>
