--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,8 +1,7 @@
 <app-header></app-header>
 @if(this.isLoading$ | async){
 <div class="spinner_overlay">
-	<mat-progress-spinner [mode]="'indeterminate'">
-	</mat-progress-spinner>
+	<mat-progress-spinner [mode]="'indeterminate'"> </mat-progress-spinner>
 </div>
 }
 <router-outlet></router-outlet>
