--- a/FrontEnd/src/app/module/auth/register/register.component.html
+++ b/FrontEnd/src/app/module/auth/register/register.component.html
@@ -5,68 +5,43 @@
 				<div class="card text-black" style="border-radius: 25px">
 					<div class="card-body p-md-5">
 						<div class="row justify-content-center">
-							<div
-								class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-								<p
-									class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
-									Đăng ký
-								</p>
+							<div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+								<p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Đăng ký</p>
 
-								<form
-									(ngSubmit)="onSubmit()"
-									[formGroup]="registerForm"
-									class="mx-1 mx-md-4">
-									<div
-										class="d-flex flex-row align-items-center mb-4">
-										<i
-											class="fas fa-user fa-lg me-3 fa-fw"></i>
-										<div
-											class="form-outline flex-fill mb-0">
-											<label
-												class="form-label"
-												for="form3Example1c"
-												>Tên của bạn</label
-											>
+								<mat-form-field (ngSubmit)="onSubmit()" [formGroup]="registerForm" class="mx-1 mx-md-4">
+									<div class="d-flex flex-row align-items-center mb-4">
+										<i class="fas fa-user fa-lg me-3 fa-fw"></i>
+										<div class="form-outline flex-fill mb-0">
+											<mat-label>Tên của bạn</mat-label>
 											<input
 												type="text"
-												id="form3Example1c"
 												class="form-control"
 												placeholder="Xưng danh đi đại hiệp"
 												formControlName="fullname" />
+											<!-- @if (registerForm) {
+											<mat-error>{{ errorMessage }}</mat-error>
+											} -->
 										</div>
 									</div>
 
-									<div
-										class="d-flex flex-row align-items-center mb-4">
-										<i
-											class="fas fa-user fa-lg me-3 fa-fw"></i>
-										<div
-											class="form-outline flex-fill mb-0">
-											<label
-												class="form-label"
-												for="form3Example1c"
-												>Tên tài khoản của bạn</label
-											>
+									<div class="d-flex flex-row align-items-center mb-4">
+										<i class="fas fa-user fa-lg me-3 fa-fw"></i>
+										<div class="form-outline flex-fill mb-0">
+											<label class="form-label" for="form3Example1c">Tên tài khoản của bạn</label>
 											<input
 												type="text"
 												id="form3Example1c"
 												class="form-control"
 												placeholder="Nhập username"
-												formControlName="username" />
+												formControlName="username"
+												(input)="onCheckValidUsername()" />
 										</div>
 									</div>
 
-									<div
-										class="d-flex flex-row align-items-center mb-4">
-										<i
-											class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-										<div
-											class="form-outline flex-fill mb-0">
-											<label
-												class="form-label"
-												for="form3Example3c"
-												>Email của bạn</label
-											>
+									<div class="d-flex flex-row align-items-center mb-4">
+										<i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+										<div class="form-outline flex-fill mb-0">
+											<label class="form-label" for="form3Example3c">Email của bạn</label>
 											<input
 												type="email"
 												placeholder="Nhập email"
@@ -76,17 +51,10 @@
 										</div>
 									</div>
 
-									<div
-										class="d-flex flex-row align-items-center mb-4">
-										<i
-											class="fas fa-lock fa-lg me-3 fa-fw"></i>
-										<div
-											class="form-outline flex-fill mb-0">
-											<label
-												class="form-label"
-												for="form3Example4c"
-												>Mật khẩu</label
-											>
+									<div class="d-flex flex-row align-items-center mb-4">
+										<i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+										<div class="form-outline flex-fill mb-0">
+											<label class="form-label" for="form3Example4c">Mật khẩu</label>
 											<input
 												type="password"
 												placeholder="Nhập password"
@@ -96,17 +64,10 @@
 										</div>
 									</div>
 
-									<div
-										class="d-flex flex-row align-items-center mb-4">
-										<i
-											class="fas fa-key fa-lg me-3 fa-fw"></i>
-										<div
-											class="form-outline flex-fill mb-0">
-											<label
-												class="form-label"
-												for="form3Example4cd"
-												>Xác nhận mật khẩu</label
-											>
+									<div class="d-flex flex-row align-items-center mb-4">
+										<i class="fas fa-key fa-lg me-3 fa-fw"></i>
+										<div class="form-outline flex-fill mb-0">
+											<label class="form-label" for="form3Example4cd">Xác nhận mật khẩu</label>
 											<input
 												type="password"
 												placeholder="Nhập lai password"
@@ -124,18 +85,12 @@
 										</label>
 									</div> -->
 
-									<div
-										class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-										<button
-											type="submit"
-											class="btn btn-primary btn-lg">
-											Đăng ký
-										</button>
+									<div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+										<button type="submit" class="btn btn-primary btn-lg">Đăng ký</button>
 									</div>
-								</form>
+								</mat-form-field>
 							</div>
-							<div
-								class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+							<div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 								<img
 									src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
 									class="img-fluid"
