Position: Filter  (Stage 1)

--- a/FrontEnd/src/app/module/position/position.component.html
+++ b/FrontEnd/src/app/module/position/position.component.html
@@ -1,5 +1,5 @@
 <div class=" d-flex flex-column justify-content-center" style="margin-left: 7%; margin-right: 7%;">
-	<span class=" mt-4 mx-auto" style="font-size: 35px;">POSITIONS</span>
+	<!-- <span class=" mt-4 mx-auto" style="font-size: 35px;">POSITIONS</span> -->
 	<div class="mx-3">
 		<div class="container py-3 d-flex flex-row">
 			<div class="d-flex flex-column" style="width: 70%;">
